--- a/app/src/main/res/layout/activity_program_exercises.xml
+++ b/app/src/main/res/layout/activity_program_exercises.xml
@@ -29,30 +29,32 @@
         android:textStyle="bold"
         android:padding="14dp"
         />
-    <pl.droidsonroids.gif.GifImageView
-        android:id="@+id/workout_item_image"
-        android:layout_width="@dimen/workout_item_width"
-        android:layout_height="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_workout"
+        android:layout_width="wrap_content"
+        app:cardCornerRadius="15dp"
         app:layout_constraintTop_toBottomOf="@+id/title_program_workout"
-        android:src="@drawable/stretchandrelax"
-        android:adjustViewBounds="true"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:cardUseCompatPadding="true"
+        app:cardElevation="10dp"
+        android:layout_height="wrap_content">
 
-<!--    <ImageView-->
-<!--        android:id="@+id/workout_item_image"-->
-<!--        android:layout_width="@dimen/workout_item_width"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/title_program_workout"-->
-<!--        android:src="@drawable/stretchandrelax"-->
-<!--        android:adjustViewBounds="true"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"/>-->
+        <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/workout_item_image"
+            android:layout_width="@dimen/workout_item_width"
+            android:layout_height="wrap_content"
+            android:src="@drawable/stretchandrelax"
+            android:adjustViewBounds="true" />
+
+    </androidx.cardview.widget.CardView>
+
+
     <TextView
         android:id="@+id/workout_item_description"
         android:layout_width="@dimen/workout_item_width"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/workout_item_image"
+        app:layout_constraintTop_toBottomOf="@+id/card_workout"
         android:text="this is a description"
         android:layout_margin="@dimen/margin_layout"
         app:layout_constraintLeft_toLeftOf="parent"
