--- a/app/src/main/res/drawable/primary_button.xml
+++ b/app/src/main/res/drawable/primary_button.xml
@@ -5,6 +5,7 @@
     <gradient android:startColor="@color/white"
         android:endColor="@color/white"
          />
+
     <corners android:radius="15dp" />
-    <stroke android:width="6px" android:color="@color/white" />
+    <stroke android:width="3px" android:color="@color/colorPrimary" />
 </shape>
