--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -78,11 +78,12 @@
         android:layout_margin="@dimen/margin_layout"
         android:paddingRight="@dimen/padding_all"
         android:paddingLeft="@dimen/padding_all"
-        app:endIconMode="clear_text"
+        app:endIconMode="password_toggle"
         app:layout_constraintRight_toRightOf="parent"
         android:hint="@string/hint_password">
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
+            android:inputType="textPassword"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
     <TextView
