--- a/app/src/main/res/layout/activity_photo_tracker.xml
+++ b/app/src/main/res/layout/activity_photo_tracker.xml
@@ -29,13 +29,18 @@
         android:textStyle="bold"
         android:padding="14dp"
         />
-    <ImageView
-        app:layout_constraintTop_toBottomOf="@id/title_photo_tracker"
-        android:layout_width="wrap_content"
+
+    <androidx.recyclerview.widget.RecyclerView
+        app:layout_constraintTop_toBottomOf="@+id/title_photo_tracker"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:clipToPadding="false"
+        android:paddingBottom="60dp"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progress_picture"/>
+        android:id="@+id/photo_view">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
     <Button
         android:id="@+id/btn_add_photo"
