--- a/app/src/main/res/layout/activity_programs.xml
+++ b/app/src/main/res/layout/activity_programs.xml
@@ -55,6 +55,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_width="wrap_content"
+        android:clipToPadding="false"
+        android:paddingBottom="60dp"
         android:layout_height="wrap_content">
 
     </androidx.recyclerview.widget.RecyclerView>
