--- a/app/src/main/res/layout/activity_program_exercises.xml
+++ b/app/src/main/res/layout/activity_program_exercises.xml
@@ -6,21 +6,10 @@
     android:layout_height="match_parent"
    >
 
-    <ImageButton
-        android:id="@+id/back_arrow"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/padding_all"
-        android:tint="@color/black"
-        android:src="?attr/homeAsUpIndicator"
-        android:background="?attr/selectableItemBackgroundBorderless"/>
-
 
     <TextView
         android:id="@+id/title_program_workout"
-        app:layout_constraintLeft_toRightOf="@id/back_arrow"
+        app:layout_constraintLeft_toLeftOf="@+id/card_workout"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
