--- a/app/src/main/res/layout/activity_weight_history.xml
+++ b/app/src/main/res/layout/activity_weight_history.xml
@@ -7,7 +7,7 @@
     tools:context=".Activities.WeightHistoryActivity">
 
     <ImageButton
-        android:id="@+id/back_arrow"
+        android:id="@+id/back_arrow_wh"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
@@ -19,7 +19,7 @@
     <TextView
 
         android:id="@+id/title_weight_history"
-        app:layout_constraintLeft_toRightOf="@id/back_arrow"
+        app:layout_constraintLeft_toRightOf="@id/back_arrow_wh"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
