--- a/app/src/main/res/layout/activity_weight_tracker.xml
+++ b/app/src/main/res/layout/activity_weight_tracker.xml
@@ -8,7 +8,7 @@
     tools:context=".Activities.WeightTrackerActivity">
 
     <ImageButton
-        android:id="@+id/back_arrow"
+        android:id="@+id/back_arrow_wt"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
@@ -20,7 +20,7 @@
     <TextView
 
         android:id="@+id/title_weight_tracker"
-        app:layout_constraintLeft_toRightOf="@id/back_arrow"
+        app:layout_constraintLeft_toRightOf="@id/back_arrow_wt"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
