--- a/app/src/main/res/layout/activity_weight_tracker.xml
+++ b/app/src/main/res/layout/activity_weight_tracker.xml
@@ -32,7 +32,7 @@
         android:padding="14dp"
         />
     <com.github.mikephil.charting.charts.LineChart
-        app:layout_constraintTop_toBottomOf="@id/back_arrow"
+        app:layout_constraintTop_toBottomOf="@id/back_arrow_wt"
         android:padding="14dp"
         android:layout_width="match_parent"
         android:layout_height="400dip"
